--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,12 @@
 
 UNRELEASED:
 
+Version: 4.7.0, Date: 2020-02-27
+- Updated the PubNub bundled library to version 4.27.2
+- Added logic migrate Firefox users data from the legacy data structures to new data structures (Firefox Only)
+- Updated the DOMPurify bundled library with the binary compatible version
+- Improved the Twitch hiding bandaid
+
 Version: 4.6.0, Date: 2020-02-19
 - Updated translations
 - Fixed an issue with the whitelist filter that's created on the 'Don't run on this page' AdBlock menu option
