--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.26.0, Date: 2021-01-05
+- Updated the AdBlock popup menu
+
 Version: 4.25.1, Date: 2020-12-16
 - Fixed an issue with missing messages in the locale files
 
