--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.32.0, Date: 2021-04-04
+- Show the /update page to let users know what features have been updated in the last 6 months.
+
 Version: 4.31.0, Date: 2021-03-31
 - Updated Translations
 - Fixed and improved the hiding wizard
